--- a/ios/EarnExtraMoney/LaunchScreen.storyboard
+++ b/ios/EarnExtraMoney/LaunchScreen.storyboard
@@ -17,17 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="joO-EO-TUB">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="R1R-sA-B2T">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="joO-EO-TUB" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="aeh-t9-2u5"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="joO-EO-TUB" secondAttribute="trailing" id="gI6-YS-mwg"/>
-                            <constraint firstAttribute="bottom" secondItem="joO-EO-TUB" secondAttribute="bottom" id="qT1-pZ-B7H"/>
-                            <constraint firstItem="joO-EO-TUB" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="yi1-Jq-erc"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="R1R-sA-B2T" secondAttribute="trailing" id="II1-0w-nnW"/>
+                            <constraint firstAttribute="bottom" secondItem="R1R-sA-B2T" secondAttribute="bottom" id="Qic-ZW-Ui1"/>
+                            <constraint firstItem="R1R-sA-B2T" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="eiZ-OL-aNm"/>
+                            <constraint firstItem="R1R-sA-B2T" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="nLg-Me-FuH"/>
                         </constraints>
                     </view>
                 </viewController>
